components/BaseContentLayout/BaseContentLayout.module.css
.container {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.content {
  flex: 1;
  display: flex;
}

.submitContainer {
  display: flex;
  align-items: center;
  flex-direction: column-reverse;
}

.customButton {
  margin-left: 20px;
  margin-bottom: 10px;
}

@media (min-width: 720px) {
  .submitContainer {
    flex-direction: row;
    margin-bottom: 10px;
  }
}

@media (min-width: 1080px) {
  .content {
    flex: 1;
    display: flex;
    flex-direction: column;
  }
  .submitContainer {
    align-items: center;
    flex-direction: row;
  }
}

@media (min-width: 1600px) {
  .submitContainer {
    margin-bottom: 20px;
  }

  .container {
    justify-content: inherit;
  }
}

@media (min-width: 1920px) {
  .container {
    gap: 200px;
  }
}

